--- a/casita-s/templates/contactUs.html
+++ b/casita-s/templates/contactUs.html
@@ -209,7 +209,7 @@
     <!-- Contact Information -->
     <div class="container mt-5 container-custom">
       <div class="row">
-        <div class="col-xl-6 mb-4">
+        <div class="col-xl-6 mb-4 mt-4">
           
           <div class="card p-4 h-100" style = "background-color: rgb(182, 121, 1);
           padding: 20px;
@@ -231,7 +231,7 @@
         </div>
 
         <!-- Additional Contact Info -->
-        <div class="col-xl-6 mb-4">
+        <div class="col-xl-6 mb-4 mt-4">
           <div class="card p-4 h-100 fiesta-border" style = "background-color: rgb(182, 121, 1);
           padding: 20px;
           border-radius: 40px;
