--- a/casita-s/templates/contactUs.html
+++ b/casita-s/templates/contactUs.html
@@ -161,6 +161,8 @@
           transform: rotate(5deg);
         }
       }
+
+
     </style>
   </head>
 
@@ -208,14 +210,14 @@
 
     <!-- Contact Information -->
     <div class="container mt-5 container-custom">
-      <div class="row">
-        <div class="col-xl-6 mb-4 mt-4">
+      <div class="row" sty">
+        <div class="col-xl-6 mb-4 mt-4"  >
           
           <div class="card p-4 h-100" style = "background-color: rgb(182, 121, 1);
           padding: 20px;
           border-radius: 40px;
           border: 5px solid #000000;
-          box-shadow: 0 0 0 8px #fff;">
+          box-shadow: 0 0 0 4px #fff;">
 
             <h2 class="text-highlight">Where to find us</h2>
             <h5>NEPO CENTER 2009 ANGELES CITY, PHILIPPINES</h5>
@@ -236,7 +238,7 @@
           padding: 20px;
           border-radius: 40px;
           border: 5px solid #000000;
-          box-shadow: 0 0 0 8px #fff;">
+          box-shadow: 0 0 0 4px #fff;">
             <h2 class="text-center border-bottom">
               More information about Casita's
             </h2>
@@ -316,7 +318,7 @@
           padding: 20px;
           border-radius: 40px;
           border: 5px solid #000000;
-          box-shadow: 0 0 0 8px #fff;">
+          box-shadow: 0 0 0 4px #fff;">
             <div id="success-alert"></div>
             <form action="/" method="POST">
               <div class="form-group">
