--- a/casita-s/templates/index.html
+++ b/casita-s/templates/index.html
@@ -16,6 +16,9 @@
       crossorigin="anonymous"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poiret+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -37,36 +40,99 @@
       /* Navbar Styles */
       .navbar {
         animation: change-style linear both;
-        background-color: rgba(27, 26, 26, 0.853);
-        transition: background-color 0.3s ease;
-        font-weight: 900;
-        text-shadow: 0.3px 0.3px 0 #000, -0.3px -0.3px 0 #000,
-          0.3px -0.3px 0 #000, -0.3px 0.3px 0 #000;
-          animation-timeline: scroll();
-          animation-range: 0 150px;
-          background-color: rgb(99, 0, 0);
+        background-color: rgba(156,5,13,230);
+        height: fit-content;
+        padding: 0 !important;  
+        font-family: "Poppins", sans-serif;
+        font-weight: 400;
       }
 
-      @keyframes change-style {
-        to {  top: 2%;
-              transform: translateX(1%);
-              border-radius: 2rem;
-              width: 98%;
-          }
-      }
-          
-
-      .navbar .nav-link {
-        color: white !important; /* Color for nav links */
+      #navbarNav {
+        margin: 0 !important;
       }
 
-      .navbar .nav-link:hover {
-        color: gold !important; /* Hover color for nav links */
-      }
+      .nav-link {
+    color: #ffffd1 !important;
+    padding: 1.8rem !important;
+    position: relative;
+    text-transform: uppercase;
+    overflow: hidden;
+}
+
+.nav-link::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #83040c;
+    z-index: -1;
+    transition: height 0.3s ease-in-out;
+}
+
+.nav-link:hover::before {
+    height: 100%;
+}
+
+.navbar-brand {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+}
+
+.navbar-brand::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #83040c;
+    transition: height 0.3s ease-in-out;
+}
+
+.navbar-brand:hover::before {
+    height: 100%;
+}
+
+.navbar-brand img {
+    position: relative;
+    z-index: 1;
+}
+
 
       .navbar-toggler {
         margin-right: 1rem; /* Adjust this value as needed for spacing */
+        margin-top: 0;
+        border: none;
       }
+
+      .navbar-toggler:focus {
+        border: none;
+        box-shadow: none;
+        outline: none;
+      }
+
+
+    .bar1, .bar2, .bar3 {
+  width: 1.8rem;   /* 35px in rem */
+  height: 0.2rem;  /* 5px in rem */
+  background-color: #ffffd1;
+  margin: 0.375rem 0; /* 6px in rem */
+  transition: 0.4s;
+}
+
+    .change .bar1 {
+      transform: translate(0, 9px) rotate(-45deg);
+    }
+
+    .change .bar2 {opacity: 0;}
+
+    .change .bar3 {
+      transform: translate(0, -9px) rotate(45deg);
+    }
+
 
       /* Background Image Section */
       .bg-section {
@@ -345,21 +411,26 @@
           src="images/logo.png"
           alt="casita's logo"
           class="img-fluid"
-          style="max-height: 80px; margin-left: 2rem; background-color: rgb(99, 0, 0);"
+          style="max-height: 5rem; margin: -.3rem 2rem;"
         />
       </a>
 
       <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+    onclick="myFunction(this)"
+  >
+    <div class="container">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
+  </button>
 
       <div
         class="collapse navbar-collapse"
@@ -709,5 +780,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<script>
+  function myFunction(x) {
+    x.classList.toggle("change");
+  }
+</script>
   </body>
 </html>
