--- a/casita-s/templates/about.html
+++ b/casita-s/templates/about.html
@@ -15,6 +15,10 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poiret+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&display=swap" rel="stylesheet">
+    
 
     <link
       rel="stylesheet"
@@ -56,74 +60,104 @@
       
     }
 
-    @keyframes change-style {
-	to {  top: 2%;
-        transform: translateX(1%);
-        border-radius: 2rem;
-        width: 98%;
-    }
-}
-
-.navbar {
-	  animation: change-style linear both;
-    transition: ease-in-out 0.3s;
-    position: fixed !important;
-    top: 0; 
-    width: 100%;
-    z-index: 1030;
-}
-
-  .navbar{
-	animation-timeline: scroll();
-	animation-range: 0 150px;
-}
     .navbar {
-        background-color: #630000; /* Background color for the navbar */
-        font-weight: 900;
-        text-shadow: 0.3px 0.3px 0 #000, -0.3px -0.3px 0 #000,
-          0.3px -0.3px 0 #000, -0.3px 0.3px 0 #000;
-          z-index: 1000;
-          transition: all 0.3s ease;
-          width: 100%;
-      }
-      .navbar .nav-link.about {
-        color: white;
+        animation: change-style linear both;
+        background-color: rgba(95,0,5,230);
+        height: fit-content;
+        padding: 0 !important;  
+        font-family: "Poppins", sans-serif;
+        font-weight: 400;
       }
 
-      .navbar .nav-link.menu {
-        color: white;
+      #navbarNav {
+        margin: 0 !important;
       }
 
-      .navbar .nav-link.contact {
-        color: white;
-      }
+      .nav-link {
+    color: #ffffd1 !important;
+    padding: 1.8rem !important;
+    position: relative;
+    text-transform: uppercase;
+    overflow: hidden;
+}
 
+.nav-link::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #500005;
+    z-index: -1;
+    transition: height 0.3s ease-in-out;
+}
 
-      .navbar .nav-link {
-        color: #c0000b; /* Color for nav links */
-        transition: transform 0.3s ease, color 0.3s ease; /* Smooth transition for transform and color */
-      }
+.nav-link:hover::before {
+    height: 100%;
+}
 
-      .navbar .nav-link:hover {
-        color: gold !important; /* Hover color for nav links */
-      }
+.navbar-brand {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+}
+
+.navbar-brand::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #500005;
+    transition: height 0.3s ease-in-out;
+}
+
+.navbar-brand:hover::before {
+    height: 100%;
+}
+
+.navbar-brand img {
+    position: relative;
+    z-index: 1;
+}
+
 
       .navbar-toggler {
         margin-right: 1rem; /* Adjust this value as needed for spacing */
+        margin-top: 0;
+        border: none;
       }
 
-.navbar .nav-link:hover {
-  color: gold !important; /* Change text color on hover */
-  /* transform: scale(1.2); Grow the text size on hover */
+      .navbar-toggler:focus {
+        border: none;
+        box-shadow: none;
+        outline: none;
+      }
+
+
+    .bar1, .bar2, .bar3 {
+  width: 1.8rem;   /* 35px in rem */
+  height: 0.2rem;  /* 5px in rem */
+  background-color: #ffffd1;
+  margin: 0.375rem 0; /* 6px in rem */
+  transition: 0.4s;
 }
 
-.navbar-collapse {
-  border-radius: 1rem;
-}
+    .change .bar1 {
+      transform: translate(0, 9px) rotate(-45deg);
+    }
+
+    .change .bar2 {opacity: 0;}
+
+    .change .bar3 {
+      transform: translate(0, -9px) rotate(45deg);
+    } 
 
 .space{
   width: 100%; /* or a specific value, e.g., 50% */
-            height: 110px; /* specify the height */
+            height: 5rem; /* specify the height */
             background-color: #630000; /* give it a background color to make it visible */
 }
     .image-container {
@@ -616,53 +650,45 @@ animation: appear-left linear;
       font-size: 1.5em;
     }
 
-    .footer {
-      background-color: #343a40;
-      color: white;
-    }
-
-    .footer a {
-      color: #e17a09;
-    }
-
-    .footer a:hover {
-      text-decoration: underline;
-    }
   
   </style>
   <body>
     <!--Navbar class is the actual navbar, with the light(remove underline) and the size-->
-    <nav
-      class="navbar navbar-expand-lg navbar-light d-flex justify-content-between"
-    >
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand" href="/">
         <img
           src="images/logo.png"
           alt="casita's logo"
           class="img-fluid"
-          style="max-height: 80px; margin-left: 2rem; background-color: rgb(99, 0, 0); /* Background color for the navbar */"
+          style="max-height: 5rem; margin: -.3rem 2rem;"
         />
       </a>
 
-      <!--THIS PART SHOW THE NAVBAR WHEN RESOLUTION IS CHANGE-->
       <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!--UP TO HERE-->
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+    onclick="myFunction(this)"
+  >
+    <div class="container">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
+  </button>
 
-      <!--Collapse navbar shows the list on a better way-->
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div
+        class="collapse navbar-collapse"
+        id="navbarNav"
+        style="margin-right: 5%"
+      >
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link about" href="/about">About us</a>
+            <a class="nav-link Intro" href="/about">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link menu" href="/menu">Menu</a>
@@ -816,7 +842,7 @@ animation: appear-left linear;
       style="
         padding-top: 40px;
         padding-bottom: 40px;
-        background-color: #333;
+        background-color: #1b1e20;
         color: #fff;
       "
     >
