--- a/casita-s/templates/contactUs.html
+++ b/casita-s/templates/contactUs.html
@@ -16,6 +16,11 @@
       crossorigin="anonymous"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poiret+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&display=swap" rel="stylesheet">
+    
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -36,44 +41,99 @@
     
       .navbar {
         animation: change-style linear both;
-        background-color: rgba(27, 26, 26, 0.853);
-        transition: background-color 0.3s ease;
-        font-weight: 900;
-        text-shadow: 0.3px 0.3px 0 #000, -0.3px -0.3px 0 #000,
-          0.3px -0.3px 0 #000, -0.3px 0.3px 0 #000;
-          animation-timeline: scroll();
-          animation-range: 0 150px;
-          background-color: rgb(99, 0, 0);
+        background-color: rgba(95,0,5,230);
+        height: fit-content;
+        padding: 0 !important;  
+        font-family: "Poppins", sans-serif;
+        font-weight: 400;
       }
 
-      @keyframes change-style {
-	to {  top: 2%;
-        transform: translateX(1%);
-        border-radius: 2rem;
-        width: 98%;
-    }
+      #navbarNav {
+        margin: 0 !important;
+      }
+
+      .nav-link {
+    color: #ffffd1 !important;
+    padding: 1.8rem !important;
+    position: relative;
+    text-transform: uppercase;
+    overflow: hidden;
 }
-    
-      .navbar .nav-link {
-        color: #ffffff;
-        transition: transform 0.3s ease, color 0.3s ease;
+
+.nav-link::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #500005;
+    z-index: -1;
+    transition: height 0.3s ease-in-out;
+}
+
+.nav-link:hover::before {
+    height: 100%;
+}
+
+.navbar-brand {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+}
+
+.navbar-brand::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #500005;
+    transition: height 0.3s ease-in-out;
+}
+
+.navbar-brand:hover::before {
+    height: 100%;
+}
+
+.navbar-brand img {
+    position: relative;
+    z-index: 1;
+}
+
+
+      .navbar-toggler {
+        margin-right: 1rem; /* Adjust this value as needed for spacing */
+        margin-top: 0;
+        border: none;
       }
-    
-      .navbar .nav-link:hover {
-        color: gold !important;
+
+      .navbar-toggler:focus {
+        border: none;
+        box-shadow: none;
+        outline: none;
       }
-    
-      .navbar .nav-link.about,
-      .navbar .nav-link.menu,
-      .navbar .nav-link.contact {
-        color: white;
-      }
-    
-      .navbar .nav-link.about:hover,
-      .navbar .nav-link.menu:hover,
-      .navbar .nav-link.contact:hover {
-        color: gold !important;
-      }
+
+
+    .bar1, .bar2, .bar3 {
+  width: 1.8rem;   /* 35px in rem */
+  height: 0.2rem;  /* 5px in rem */
+  background-color: #ffffd1;
+  margin: 0.375rem 0; /* 6px in rem */
+  transition: 0.4s;
+}
+
+    .change .bar1 {
+      transform: translate(0, 9px) rotate(-45deg);
+    }
+
+    .change .bar2 {opacity: 0;}
+
+    .change .bar3 {
+      transform: translate(0, -9px) rotate(45deg);
+    }
+
     
       .card {
         background-color: #1e1e1ee0;
@@ -138,10 +198,7 @@
         background-color: #9e0808;
         border-color: #e85a28;
       }
-    
-      .footer {
-        background-color: rgba(76, 69, 69, 0.384);
-      }
+  
     
       .nav-item.active .nav-link {
         color: gold !important;
@@ -174,29 +231,35 @@
           src="images/logo.png"
           alt="casita's logo"
           class="img-fluid"
-          style="max-height: 80px"
+          style="max-height: 5rem; margin: -.3rem 2rem;"
         />
       </a>
 
       <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+    onclick="myFunction(this)"
+  >
+    <div class="container">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
+  </button>
 
       <div
         class="collapse navbar-collapse"
         id="navbarNav"
+        style="margin-right: 5%"
       >
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link about" href="/about">About us</a>
+            <a class="nav-link Intro" href="/about">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link menu" href="/menu">Menu</a>
@@ -365,7 +428,7 @@
     style="
       padding-top: 40px;
       padding-bottom: 40px;
-      background-color: #333;
+      background-color: #1b1e20;
       color: #fff;
     "
   >
