--- a/casita-s/templates/index.html
+++ b/casita-s/templates/index.html
@@ -31,6 +31,11 @@
       rel="stylesheet"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Permanent+Marker&family=Poiret+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&display=swap" rel="stylesheet">
+
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css" />
 
@@ -40,7 +45,7 @@
       /* Navbar Styles */
       .navbar {
         animation: change-style linear both;
-        background-color: rgba(156,5,13,230);
+        background-color: rgba(95,0,5,230);
         height: fit-content;
         padding: 0 !important;  
         font-family: "Poppins", sans-serif;
@@ -66,7 +71,7 @@
     left: 0;
     width: 100%;
     height: 0;
-    background-color: #83040c;
+    background-color: #500005;
     z-index: -1;
     transition: height 0.3s ease-in-out;
 }
@@ -88,7 +93,7 @@
     left: 0;
     width: 100%;
     height: 0;
-    background-color: #83040c;
+    background-color: #500005;
     transition: height 0.3s ease-in-out;
 }
 
@@ -346,6 +351,14 @@
         margin-bottom: 0;
         padding-top: 0;
         padding-bottom: 0;
+      }
+
+      #starters h1 {
+        font-family: "Permanent Marker", cursive;
+        font-weight: 400;
+        font-style: normal;
+        color: #ff960c;
+        font-size: 4rem;
       }
 
       .menu-button-container {
@@ -712,7 +725,7 @@
       style="
         padding-top: 40px;
         padding-bottom: 40px;
-        background-color: #333;
+        background-color: #1b1e20;
         color: #fff;
       "
     >
