--- a/casita-s/templates/menu.html
+++ b/casita-s/templates/menu.html
@@ -17,6 +17,11 @@ MENU
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poiret+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&display=swap" rel="stylesheet">
+    
+
     <!-- jQuery and Popper.js -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
@@ -34,18 +39,99 @@ MENU
 
       /* Navbar Styles */
       .navbar {
-        background-color: white; /* Background color for the navbar */
-        font-weight: 900;
-        border-bottom: 5px solid #e17a09;
+        animation: change-style linear both;
+        background-color: rgba(95,0,5,230);
+        height: fit-content;
+        padding: 0 !important;  
+        font-family: "Poppins", sans-serif;
+        font-weight: 400;
       }
 
-      .navbar .nav-link {
-        color: #c0000b !important; /* Color for nav links */
+      #navbarNav {
+        margin: 0 !important;
       }
+
+      .nav-link {
+    color: #ffffd1 !important;
+    padding: 1.8rem !important;
+    position: relative;
+    text-transform: uppercase;
+    overflow: hidden;
+}
+
+.nav-link::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #500005;
+    z-index: -1;
+    transition: height 0.3s ease-in-out;
+}
+
+.nav-link:hover::before {
+    height: 100%;
+}
+
+.navbar-brand {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+}
+
+.navbar-brand::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #500005;
+    transition: height 0.3s ease-in-out;
+}
+
+.navbar-brand:hover::before {
+    height: 100%;
+}
+
+.navbar-brand img {
+    position: relative;
+    z-index: 1;
+}
+
 
       .navbar-toggler {
         margin-right: 1rem; /* Adjust this value as needed for spacing */
+        margin-top: 0;
+        border: none;
       }
+
+      .navbar-toggler:focus {
+        border: none;
+        box-shadow: none;
+        outline: none;
+      }
+
+
+    .bar1, .bar2, .bar3 {
+  width: 1.8rem;   /* 35px in rem */
+  height: 0.2rem;  /* 5px in rem */
+  background-color: #ffffd1;
+  margin: 0.375rem 0; /* 6px in rem */
+  transition: 0.4s;
+}
+
+    .change .bar1 {
+      transform: translate(0, 9px) rotate(-45deg);
+    }
+
+    .change .bar2 {opacity: 0;}
+
+    .change .bar3 {
+      transform: translate(0, -9px) rotate(45deg);
+    }
 
       .section-title {
         text-align: left;
@@ -168,19 +254,6 @@ MENU
         border-radius: 50%; /* Optional: to maintain the circular shape of the icon */
       }
 
-      .footer {
-        background-color: #343a40; /* Change to your desired footer background color */
-        color: white; /* Change text color for better contrast */
-      }
-
-      .footer a {
-        color: #e17a09; /* Change the link color if needed */
-      }
-
-      .footer a:hover {
-        text-decoration: underline; /* Optional: add underline on hover */
-      }
-
       .custom-button {
         background-color: white; /* Button background color */
         font-weight: bold; /* Bold font */
@@ -226,21 +299,26 @@ MENU
           src="images/logo.png"
           alt="casita's logo"
           class="img-fluid"
-          style="max-height: 80px; margin-left: 2rem; background-color: white"
+          style="max-height: 5rem; margin: -.3rem 2rem;"
         />
       </a>
 
       <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+    onclick="myFunction(this)"
+  >
+    <div class="container">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
+  </button>
 
       <div
         class="collapse navbar-collapse"
@@ -1449,7 +1527,7 @@ MENU
       style="
         padding-top: 40px;
         padding-bottom: 40px;
-        background-color: #333;
+        background-color: #1b1e20;
         color: #fff;
       "
     >
