PUTANGINAAAAAA NAAYOS KO DIN UNG NAVBAR

--- a/casita-s/templates/about.html
+++ b/casita-s/templates/about.html
@@ -705,7 +705,7 @@ animation: appear-left linear;
     <div class="image-container">
       <img src="images/background-about.png" alt="Background Image" />
       <!-- Collage Container -->
-      <div class="collage-container">
+      <div class="collage-container" style="margin-right: -5rem;">
         <img src="images/taco.jpg" alt="Collage Image 1" class="collage-img" />
         <img
           src="images/casita-open-field.jpg"
@@ -894,6 +894,10 @@ animation: appear-left linear;
         </div>
       </div>
     </footer>
-
+    <script>
+      function myFunction(x) {
+        x.classList.toggle("change");
+      }
+    </script>
   </body>
 </html>
