--- a/casita-s/templates/menu.html
+++ b/casita-s/templates/menu.html
@@ -1,5 +1,3 @@
-MENU
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,6 +6,11 @@ MENU
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poiret+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&display=swap" rel="stylesheet">
+       
+    
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -17,17 +20,12 @@ MENU
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poiret+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&display=swap" rel="stylesheet">
     
-
     <!-- jQuery and Popper.js -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 
-    <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 
     <title>Casita's Menu</title>
     <style>
@@ -254,6 +252,19 @@ MENU
         border-radius: 50%; /* Optional: to maintain the circular shape of the icon */
       }
 
+      .footer {
+        background-color: #343a40; /* Change to your desired footer background color */
+        color: white; /* Change text color for better contrast */
+      }
+
+      .footer a {
+        color: #e17a09; /* Change the link color if needed */
+      }
+
+      .footer a:hover {
+        text-decoration: underline; /* Optional: add underline on hover */
+      }
+
       .custom-button {
         background-color: white; /* Button background color */
         font-weight: bold; /* Bold font */
@@ -313,7 +324,7 @@ MENU
     aria-label="Toggle navigation"
     onclick="myFunction(this)"
   >
-    <div class="container">
+    <div class="rah">
       <div class="bar1"></div>
       <div class="bar2"></div>
       <div class="bar3"></div>
@@ -1527,7 +1538,7 @@ MENU
       style="
         padding-top: 40px;
         padding-bottom: 40px;
-        background-color: #1b1e20;
+        background-color: #333;
         color: #fff;
       "
     >
@@ -1586,5 +1597,10 @@ MENU
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      function myFunction(x) {
+        x.classList.toggle("change");
+      }
+    </script>
   </body>
 </html>
